--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 build/
+main-blx.bib
+main.aux
+main.bbl
+main.blg
+main.fdb_latexmk
+main.fls
+main.log
+main.out
+main.run.xml
+main.synctex.gz
+main.toc
